Fix wrong padding on k-textbox in Office365 theme. Closes telerik/kendo-ui-core#1901

--- a/styles/web/kendo.common-office365.less
+++ b/styles/web/kendo.common-office365.less
@@ -80,7 +80,11 @@ span.k-picker-wrap .k-input,
 span.k-numeric-wrap .k-input,
 span.k-dropdown-wrap .k-input,
 span.k-selectbox .k-input {
-    padding: 0.143em 0;;
+    padding: 0.143em 0;
+}
+
+ input.k-textbox {
+    padding: 2px 0;
 }
 
 .k-combobox > .k-dropdown-wrap > .k-i-close {
